# crystal-codec-gcc-v1

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_encode.py  demo_kernel_2310.py  demo_monster_dynamics.py  demo_number_crystal.py  demo_spectral_pipeline.py  demo_spectrum.py
lab/: spectral_filters.py
src/gcc_v1/: __init__.py  cluster.py  codec.py  exponents.py  invariants.py  kernel2310.py  logic.py  spectrum.py
tests/: test_basic.py  test_cluster_signature_basic.py
