[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcc-v1-crystal-codec"
version = "0.2.0"
description = "GiadaWare Crystal Codec (GCC v1) — p-adic crystal/prism prototype"
authors = [
  { name = "Giancarlo Cicellyn Comneno" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
]

[project.urls]
"Homepage" = "https://github.com/gcomneno/crystal-codec-gcc-v1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
